# sleap-roots-analyze

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: black.md  coverage.md  lint.md  pr-description.md  review-pr.md  update-changelog.md
.github/workflows/: build.yml  ci.yml  version.yml
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  RELEASE_PROCESS.md  testing.md
src/sleap_roots_analyze/: __init__.py  data_cleanup.py  data_utils.py  outlier_detection.py  pca.py  statistics.py
tests/: __init__.py  conftest.py  fixtures.py  test_data_cleanup.py  test_pca.py  test_statistics.py
tests/data/: Turface_all_traits_2024.csv  features.csv  traits_11DAG_cleaned_qc_scanner_independent.csv  traits_summary_lateral.csv
