[project]
name = "sleap-roots-analyze"
version = "0.0.1"
description = "Analyze, visualize, and interpret root traits output from sleap-roots."
readme = "README.md"
authors = [
    { name = "eberrigan", email = "eberrigan@salk.edu" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sleap-roots-analyze = "sleap_roots_analyze:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.3.0",
    "ipython>=9.5.0",
    "pydocstyle>=6.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "toml>=0.10.2",
    "twine>=6.1.0",
]

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"